# TDT4205-Exercises

./: CMakeLists.txt  README.md
Exercise1/: CMakeLists.txt
Exercise1/include/: table.h
Exercise1/src/: driver.c
Exercise1/testing/: test.py
Exercise2/: CMakeLists.txt
Exercise2/src/: parser.y  scanner.l  tree.c
Exercise3/src/: tree.c
Exercise4/: CMakeLists.txt
Exercise4/src/: symbols.c  tree.c
Exercise5/: .gitignore  CMakeLists.txt
Exercise5/assembly_skeleton/task/src/: modulo.S
Exercise5/src/: generator.c
Exercise5/vsl_programs/ps5-codegen1/: arrays.S  callframes.S  comparisons.S  everything.S  globals.S  locals.S  many-params.S  math.S  simple-array.S  simple-call.S  simple-locals.S  simple-parameters.S  simple-print.S
